<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".AtvCadastrarFilmes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:orientation="horizontal"
        android:padding="20sp">

        <TextView
            android:id="@+id/txtCadFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cadstrar filme"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnVoltar"
            android:textColor="@color/purple_700"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnExcluir"
            android:textColor="@color/purple_700"
            app:backgroundTint="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Id"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtId"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nome Protuguês:"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edtNomeP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtNomeP"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nome Inglês:"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edtNomeE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtNomeE"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Categoria:"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edtCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtCategoria"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Duração:"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edtDuracao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtDuracao"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Diretor:"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edtDiretor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtDiretor"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sinopse:"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edtSinopse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtSinopse"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnGravar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGravar"
        android:textColor="@color/purple_700"
        app:backgroundTint="@color/white" />

</LinearLayout>